--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.62.1"
   },
   "devDependencies": {
+    "@types/node": "^20.1.1",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.0.11",
     "@types/swiper": "^6.0.0",
