--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "framer-motion": "^10.12.9",
+    "query-string": "^8.1.0",
     "rc-progress": "^3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
